--- a/public/index.html
+++ b/public/index.html
@@ -5,21 +5,16 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="rgb(32,32,32)" />
-    <meta
-      name="Web Developer Portfolio | Jozef Müller"
-      content="Hello my name is Jozef Müller, I am fresh graduate aspiring to become Frontend Developer"
-    />
+    <meta name="title" content="Web Developer Portfolio - React, Javascript, UI/UX"/>
+    <meta name="description" content="Web Developer Portfolio Website. Front-End developer specialized in Javascript, React and UI/UX. Check out my Github repositories."/>
+    <meta name="robots" content="index, follow"/>
+    <meta property="author" content="Jozef Müller">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!-- MANIFEST -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!-- LATO FONT -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-    <!-- MAIN CSS -->
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="main.css">
-    <title>Web Dev Portfolio</title>
+    <title>Web Developer Portfolio - React, Javascript, UI/UX</title>
   </head>
   <body>
     <noscript>
