filter / meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -5,15 +5,40 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="rgb(32,32,32)" />
+
     <meta name="title" content="Web Developer Portfolio - React, Javascript, UI/UX"/>
-    <meta name="description" content="Web Developer Portfolio Website. Front-End developer specialized in Javascript, React and UI/UX. Check out my Github repositories."/>
-    <meta name="robots" content="index, follow"/>
+    <meta name="description" content="Web Developer Portfolio Website. Front-End developer, Javascript, React and UI/UX. Check out my Github repositories."/>
     <meta property="author" content="Jozef Müller">
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta name='keywords' content="web developer portfolio, web developer,  portfolio, react, javascript, UI/UX" />
+
+    <!-- Open Graph / Facebook -->
+    <!-- <meta property="og:type" content="website">
+    <meta property="og:url" content="https://jmullportfolio.vercel.app/portfolio">
+    <meta property="og:title" content="Web Developer Portfolio - React, Javascript, UI/UX">
+    <meta property="og:description" content="Web Developer Portfolio Website. Front-End developer specialized in Javascript, React and UI/UX. Check out my Github repositories.">
+    <meta property="og:image" content=""> -->
+
+    <!-- Twitter -->
+    <!-- <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://jmullportfolio.vercel.app/portfolio">
+    <meta property="twitter:title" content="Web Developer Portfolio - React, Javascript, UI/UX">
+    <meta property="twitter:description" content="Web Developer Portfolio Website. Front-End developer specialized in Javascript, React and UI/UX. Check out my Github repositories.">
+    <meta property="twitter:image" content=""> -->
+
+    <meta name="robots" content="index, follow"/>
+
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo96.png" />
+
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="main.css">
+
     <title>Web Developer Portfolio - React, Javascript, UI/UX</title>
   </head>
   <body>
