og and twitter meta

--- a/public/index.html
+++ b/public/index.html
@@ -12,25 +12,27 @@
     <meta name='keywords' content="web developer portfolio, web developer,  portfolio, react, javascript, UI/UX" />
 
     <!-- Open Graph / Facebook -->
-    <!-- <meta property="og:type" content="website">
+    <meta property="og:type" content="website">
     <meta property="og:url" content="https://jmullportfolio.vercel.app/portfolio">
     <meta property="og:title" content="Web Developer Portfolio - React, Javascript, UI/UX">
     <meta property="og:description" content="Web Developer Portfolio Website. Front-End developer specialized in Javascript, React and UI/UX. Check out my Github repositories.">
-    <meta property="og:image" content=""> -->
+    <meta property="og:image" content="https://firebasestorage.googleapis.com/v0/b/jozefmullportfolio.appspot.com/o/project_images%2Fjozef_mueler_portfolio.gif?alt=media&token=c6c96b4a-861b-4339-9700-47da3b2fa2b4">
 
     <!-- Twitter -->
-    <!-- <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://jmullportfolio.vercel.app/portfolio">
     <meta property="twitter:title" content="Web Developer Portfolio - React, Javascript, UI/UX">
     <meta property="twitter:description" content="Web Developer Portfolio Website. Front-End developer specialized in Javascript, React and UI/UX. Check out my Github repositories.">
-    <meta property="twitter:image" content=""> -->
+    <meta property="twitter:image" content="https://firebasestorage.googleapis.com/v0/b/jozefmullportfolio.appspot.com/o/project_images%2Fjozef_mueler_portfolio.gif?alt=media&token=c6c96b4a-861b-4339-9700-47da3b2fa2b4">
 
     <meta name="robots" content="index, follow"/>
 
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo96.png" />
+    <link rel="apple-touch-icon" sizes="16x16" href="%PUBLIC_URL%/logo16.png" />
+    <link rel="apple-touch-icon" sizes="32x32" href="%PUBLIC_URL%/logo32.png" />
+    <link rel="apple-touch-icon" sizes="96x96" href="%PUBLIC_URL%/logo96.png" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    
+
     <link rel="preconnect" href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
