--- a/public/index.html
+++ b/public/index.html
@@ -13,14 +13,14 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://jmullportfolio.vercel.app/portfolio">
+    <meta property="og:url" content="%PUBLIC_URL%/">
     <meta property="og:title" content="Web Developer Portfolio - React, Javascript, UI/UX">
     <meta property="og:description" content="Web Developer Portfolio Website. Front-End developer specialized in Javascript, React and UI/UX. Check out my Github repositories.">
     <meta property="og:image" content="https://firebasestorage.googleapis.com/v0/b/jozefmullportfolio.appspot.com/o/project_images%2Fjozef_mueler_portfolio.gif?alt=media&token=c6c96b4a-861b-4339-9700-47da3b2fa2b4">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://jmullportfolio.vercel.app/portfolio">
+    <meta property="twitter:url" content="%PUBLIC_URL%/">
     <meta property="twitter:title" content="Web Developer Portfolio - React, Javascript, UI/UX">
     <meta property="twitter:description" content="Web Developer Portfolio Website. Front-End developer specialized in Javascript, React and UI/UX. Check out my Github repositories.">
     <meta property="twitter:image" content="https://firebasestorage.googleapis.com/v0/b/jozefmullportfolio.appspot.com/o/project_images%2Fjozef_mueler_portfolio.gif?alt=media&token=c6c96b4a-861b-4339-9700-47da3b2fa2b4">
