--- a/public/index.html
+++ b/public/index.html
@@ -65,6 +65,9 @@
       .loader-hide{
         transform: translateY(100%);
       }
+      .d_none{
+        display: none !important;
+      }
     </style>
   </head>
   <body>
@@ -75,6 +78,13 @@
     <div id="root">
       <div id="page-loader">
         <img src='%PUBLIC_URL%/circloader.svg' alt="loader" width="100%" height="100%">
+      </div>
+      <div class="d_none">
+        <h1>Hello my name is Jozef Müller</h1>
+        <p>I am a fresh graduate aspiring to become a FrontEnd Developer
+          If you would like to see my work feel free to visit my <a href="/portfolio"><strong>portfolio page</strong></a>
+          You can contact me via email at: <address><a href="mailto:dodkymull@gmail.com"><strong>dodkymull@gmail.com</strong></a></address>or
+          through my <a href="/contact"><strong>contact page</strong></a></p>
       </div>
     </div>
   </body>
