--- a/public/index.html
+++ b/public/index.html
@@ -71,21 +71,21 @@
     </style>
   </head>
   <body>
-    <noscript>
-      <h1>We ran into a problem!</h1>
-      <h3>This app uses ReactJS. You need to enable JavaScript to run this app.</h3>
-    </noscript>
     <div id="root">
       <div id="page-loader">
         <img src='%PUBLIC_URL%/circloader.svg' alt="loader" width="100%" height="100%">
       </div>
-      <div class="d_none">
+      <main class="d_none">
         <h1>Hello my name is Jozef Müller</h1>
         <p>I am a fresh graduate aspiring to become a FrontEnd Developer
           If you would like to see my work feel free to visit my <a href="/portfolio"><strong>portfolio page</strong></a>
           You can contact me via email at: <address><a href="mailto:dodkymull@gmail.com"><strong>dodkymull@gmail.com</strong></a></address>or
           through my <a href="/contact"><strong>contact page</strong></a></p>
-      </div>
+      </main>
+      <noscript>
+        <p>We ran into a problem!</p>
+        <p>This app uses ReactJS. You need to enable JavaScript to run this app.</p>
+      </noscript>
     </div>
   </body>
 </html>
