--- a/public/index.html
+++ b/public/index.html
@@ -77,7 +77,9 @@
       </div>
       <main class="d_none">
         <h1>Hello my name is Jozef Müller</h1>
-        <p>I am a fresh graduate aspiring to become a FrontEnd Developer
+        <h2>I am a fresh graduate aspiring to become a FrontEnd Developer</h2>
+        <h3>I am highly motivated and driven to learn new technologies. Looking for an opportunity to gain experience in this field</h3>
+        <p>
           If you would like to see my work feel free to visit my <a href="/portfolio"><strong>portfolio page</strong></a>
           You can contact me via email at: <address><a href="mailto:dodkymull@gmail.com"><strong>dodkymull@gmail.com</strong></a></address>or
           through my <a href="/contact"><strong>contact page</strong></a></p>
