google search console

--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
     <meta property="twitter:image" content="https://firebasestorage.googleapis.com/v0/b/jozefmullportfolio.appspot.com/o/project_images%2Fjozef_mueller_portfolio.gif?alt=media&token=ff3d27a4-56d2-4b76-a4e3-bb0b15ce86ba">
 
     <meta name="robots" content="index, follow"/>
+    <meta name="google-site-verification" content="ukpxLypZjDtYtvrICtuA09ZvJS9Tm5t3n-0Wb8M79J0" />
 
     <link rel="apple-touch-icon" sizes="16x16" href="%PUBLIC_URL%/logo16.png" />
     <link rel="apple-touch-icon" sizes="32x32" href="%PUBLIC_URL%/logo32.png" />
