--- a/public/index.html
+++ b/public/index.html
@@ -74,7 +74,7 @@
   <body>
     <div id="root">
       <div id="page-loader">
-        <img src='%PUBLIC_URL%/circloader.svg' alt="loader" width="100%" height="100%">
+        <img src='%PUBLIC_URL%/circloader.svg' alt="loader" width="100%" height="100%"/>
       </div>
       <main class="d_none">
         <h1>Hello my name is Jozef Müller</h1>
