--- a/public/index.html
+++ b/public/index.html
@@ -43,38 +43,16 @@
     <link rel="stylesheet" href="main.css">
 
     <title>Web Developer Portfolio - React, Javascript, UI/UX</title>
-    <style>
-      #page-loader{
-        position: absolute;
-        z-index: 1000;
-        top: 0;
-        bottom: 0;
-        width: 100%;
-        height: 100%;
-        transform: translateY(0);
-        background: rgb(32,32,32);
-        background: radial-gradient(circle, #333 0%, #1e1e1e 100%);
-        transition: transform 1s ease-in-out !important;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-      }
-      #page-loader img{
-        max-width: 50px;
-        max-height: 50px;
-      }
-      .loader-hide{
-        transform: translateY(100%);
-      }
-      .d_none{
-        display: none !important;
-      }
-    </style>
   </head>
   <body>
     <div id="root">
       <div id="page-loader">
-        <img src='%PUBLIC_URL%/circloader.svg' alt="loader" width="100%" height="100%"/>
+        <div className="ellipsis">
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
       </div>
       <main class="d_none">
         <h1>Hello my name is Jozef Müller</h1>
